--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,5 @@
 :root {
-  --annotation-color: #86bbbd;
+  --annotation-color: #000;
 }
 
 * {
@@ -9,17 +9,47 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-family: Helvetica, sans-serif;
+  font-family: "Almarai", sans-serif;
+}
+
+footer {
+  text-align: right;
+  color: #666;
+  font-size: 13px;
+  margin-top: 15px;
 }
 
 .container {
-  width: 100%;
-  max-width: 400px;
+  width: 362px;
   margin: 75px auto;
 }
 
+.chart-holder {
+  position: relative;
+  width: 100%;
+  height: 425px;
+
+  > * {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+
+  p {
+    margin: 0;
+    text-align: center;
+    top: unset;
+    bottom: 30%;
+    z-index: -1;
+    color: #333;
+    font-size: 20px;
+    line-height: 1.4;
+  }
+}
+
 .chart {
-  width: 180px;
+  width: 100%;
 }
 
 .annotation {
@@ -58,22 +88,21 @@ body {
 .waffle {
   display: flex;
   flex-wrap: wrap;
-  width: 180px;
-
+  border: 1px solid hsla(0, 0%, 80%, 0.2);
+  box-shadow: 0 1px 8px -5px #ccc;
   .block {
-    width: 16px;
-    height: 16px;
-    margin: 1px;
+    width: 20px;
+    height: 20px;
     transform: translateY(0);
-    @for $i from 0 through 29 {
-      &:nth-child(#{130 - $i}) {
+    @for $i from 0 through 276 {
+      &:nth-child(#{346 - $i}) {
         animation: falling 600ms ease-out forwards;
-        order: #{randomNum(0, 30)};
-        animation-delay: 3s + (350ms * $i);
+        // order: #{randomNum(0, 275)};
+        animation-delay: 3s + (20ms * $i);
       }
     }
 
-    &:nth-child(10) {
+    &:nth-child(18) {
       border: 2px solid var(--annotation-color);
     }
   }
